# safedep

./: .gitignore  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: release.yml  safedep-scan.yml
hub/: audited_packages.json
src/safedep/: cli.py  hub.py
src/safedep/scanner/: cargo_scanner.py  js_scanner.py  npm_scanner.py  python_scanner.py  reputation.py  sandbox.py  static_analysis.py  typosquatting.py
src/safedep/utils/: cargo_client.py  npm_client.py  pypi_client.py
test_cargo/: Cargo.toml
test_js/: malicious.js
test_npm/: package.json
test_python/: requirements.txt
